--- a/resume/cv.tex
+++ b/resume/cv.tex
@@ -22,8 +22,8 @@
     Stanford Graduate Fellowship, Stanford University, 2007 \\
     Dean's Honors List, University of California Los Angeles, five quarters
 
-\section{PhD Research: Computational design of nanophotonic components}
-Specifically, the development of software which can
+\section{PhD Research: Nanophotonic computational design}
+Developed software to 
     design arbitrary linear nanophotonic devices which 
     are fully three-dimensional and multi-modal,
     exhibit novel functionality,
@@ -49,7 +49,7 @@ Instead, devices are designed
     Implemented cloud-based simulation service on Amazon EC2. \\
     Developed hardware-accelerated time- and frequency-domain
         electromagnetic solvers. \\
-    Matlab library for the design of arbitrary linear nanophotonic components.
+    Developed Matlab library for the design of arbitrary linear nanophotonic components.
 
 \section{Research Experience}
    \vspace{-0.1in}	
@@ -60,8 +60,8 @@ Instead, devices are designed
    \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
     Existing nanophotonic design process consisted of trial-and-error
         where each simulation about 24 hours to complete.
-    Implemented FDTD and FDFD simulation software on Nvidia GPUs to bring 
-        simulation times down to 10 minutes.
+    Implemented FDTD and FDFD simulation software on hardware-accelerated platforms 
+    to bring simulation times down to 10 minutes.
     Also developed a novel ``objective-first'' nanophotonic design algorithm
         and demonstrated automated design of arbitrary linear nanophotonic 
         devices.
