Updated cleaning schedule.

--- a/sandbox/pb_cleanup/cleanup.tex
+++ b/sandbox/pb_cleanup/cleanup.tex
@@ -11,7 +11,7 @@
 A simple plan to be faithful to maintain the property that God has given us.
 Pairs of members are assigned a specific month in which
     to clean the main church building.
-Cleanings should occur \textbf{the week leading up to the 4th Sunday} 
+Cleanings should occur \textbf{the week leading up to or following the 4th Sunday} 
     of the given month 
     (in order to be best spaced from the work day cleaning).
 Pairs are assigned so that this time can also be used as a time of fellowship.
@@ -36,24 +36,25 @@ Pairs are assigned so that this time can also be used as a time of fellowship.
 \EI
 \section{Assignments}
 \BI These dates are for 2013.
-\I  Date ranges denote Monday to Saturday of the week leading 
-        up to the fourth Sunday of the month.
+\I  Date ranges start on Monday of the week leading up to 
+    the fourth Sunday of the month, and
+    end on Saturday of the week following the fourth Sunday of the month.
     This was chosen in order to space this cleaning between
-        successive word day cleanings. \EI
+        successive work day cleanings. \EI
 \begin{center}
 \begin{tabular}{|c|c|}
     \hline
     Date range & Assignment \\
     \hline \hline
-    April 22-27 & Davis \& Hardin \\ \hline
-    May 20-25 & Lu \& Mixsell \\ \hline
-    June 17-22 & Owens \& Sheldon \\ \hline
-    July  22-27 & Sisson \& Torrefranca \\ \hline
-    August 19-24 & IBBC \& Davis \\ \hline
-    September 23-28 & Hardin \& Lu \\ \hline
-    October 21-26 & Mixsell \& Owens \\ \hline
-    November 18-23 & Sheldon \& Sisson \\ \hline
-    December 16-21 & Torrefrance \& IBBC \\ \hline
+    April 22 to May 4 & Davis \& Hardin \\ \hline
+    May 20 to June 1 & Lu \& Mixsell \\ \hline
+    June 17 to June 29 & Owens \& Sheldon \\ \hline
+    July  22 to August 3 & Sisson \& Torrefranca \\ \hline
+    August 19 to August 31 & IBBC \& Davis \\ \hline
+    September 23 to October 5 & Hardin \& Lu \\ \hline
+    October 21 to November 2 & Mixsell \& Owens \\ \hline
+    November 18 to November 30 & Sheldon \& Sisson \\ \hline
+    December 16 to December 28 & Torrefranca \& IBBC \\ \hline
 \end{tabular}
 \end{center}
 \end{document}
