Added fdtd gpu presentation

--- a/resume/cv.tex
+++ b/resume/cv.tex
@@ -28,7 +28,7 @@
     a brute force, trial-and-error process
     which took \emph{weeks to months} to improve a single structure---even with 
     a good initial guess.
-\item I had to build a system to design structures within a day,
+\item I built a system to design structures within a day,
     solely based on the performance specification of the desired device,
     and without good initial guesses.
 \item I applied methods from the field of convex optimization 
@@ -44,6 +44,7 @@
     \end{itemize}
 
 \section{Publications}          
+    ``Nanophotonic Computational Design'' Jesse Lu, Jelena Vuckovic (Optics Express, 2013 \emph{in process}). \\
     ``Objective-first design of high-efficiency, small-footprint couplers between arbitrary nanophotonic waveguide modes'' Jesse Lu, Jelena Vuckovic (Optics Express, 2012). \\
     ``Inverse design of a three-dimensional nanophotonic resonator'' Jesse Lu, Stephen Boyd, Jelena Vuckovic (Optics Express, 2011). \\
     ``Inverse design of nanophotonic structures using complementary convex optimization'' Jesse Lu, Jelena Vuckovic (Optics Express, 2010). \\
