--- a/resume/cv.tex
+++ b/resume/cv.tex
@@ -14,7 +14,7 @@
 \begin{resume}
 
 \section{Education}          
-    Stanford University, PhD, Electrical Engineering, June 2013 \\
+    Stanford University, PhD, Electrical Engineering, June 2013 (GPA: 3.657)\\
     Stanford University, Masters of Science, Electrical Engineering, May 2012 \\
     University of California Los Angeles, Bachelor of Science, Electrical Engineering, June 2006
 
@@ -44,14 +44,14 @@
     \end{itemize}
 
 \section{Publications}          
-    ``Nanophotonic Computational Design'' Jesse Lu, Jelena Vuckovic (Optics Express, 2013 \emph{in process}). \\
+    ``Nanophotonic Computational Design'' Jesse Lu, Jelena Vuckovic (Optics Express, 2013). \\
     ``Objective-first design of high-efficiency, small-footprint couplers between arbitrary nanophotonic waveguide modes'' Jesse Lu, Jelena Vuckovic (Optics Express, 2012). \\
     ``Inverse design of a three-dimensional nanophotonic resonator'' Jesse Lu, Stephen Boyd, Jelena Vuckovic (Optics Express, 2011). \\
     ``Inverse design of nanophotonic structures using complementary convex optimization'' Jesse Lu, Jelena Vuckovic (Optics Express, 2010). \\
     ``Numerical optimization of a grating coupler for the efficient excitation of surface plasmons at an Ag-SiO2 interface'' Jesse Lu, Csaba Petre, Josh Conway, Eli Yablonovitch (JOSA B, 2007).
   
 \section{Programming}          
-    Fluent in Python, CUDA, and Matlab. \\
+    Fluent in Python, CUDA, C, C++, and Matlab. \\
     Implemented cloud-based simulation service on Amazon EC2. \\
     Developed hardware-accelerated time- and frequency-domain
         electromagnetic solvers. \\
