Updated cv with UCLA GPA.

--- a/resume/cv.tex
+++ b/resume/cv.tex
@@ -14,9 +14,9 @@
 \begin{resume}
 
 \section{Education}          
-    Stanford University, PhD, Electrical Engineering, June 2013 (GPA: 3.657)\\
-    Stanford University, Masters of Science, Electrical Engineering, May 2012 \\
-    University of California Los Angeles, Bachelor of Science, Electrical Engineering, June 2006
+    Stanford University, Ph.D., Electrical Engineering, June 2013 (GPA: 3.657)\\
+    Stanford University, M.S. , Electrical Engineering, May 2012 (GPA: 3.657)\\
+    University of California Los Angeles, B.S., Electrical Engineering, June 2006 (GPA: 3.769)
 
 \section{Honors}
     Stanford Graduate Fellowship, Stanford University, 2007 \\
@@ -51,7 +51,7 @@
     ``Numerical optimization of a grating coupler for the efficient excitation of surface plasmons at an Ag-SiO2 interface'' Jesse Lu, Csaba Petre, Josh Conway, Eli Yablonovitch (JOSA B, 2007).
   
 \section{Programming}          
-    Fluent in Python, CUDA, C, C++, and Matlab. \\
+    Fluent in Python, CUDA, Linux, C, C++, and Matlab. \\
     Implemented cloud-based simulation service on Amazon EC2. \\
     Developed hardware-accelerated time- and frequency-domain
         electromagnetic solvers. \\
